Fix Asset Grid Delete Dialog. Set Pinned columns. Fix Alignment issues.

--- a/src/app/programming-feature/requests/requests-details/assets/assets.component.scss
+++ b/src/app/programming-feature/requests/requests-details/assets/assets.component.scss
@@ -24,3 +24,17 @@
   align-items: center;
   justify-content: center;
 }
+
+:host ::ng-deep .modal-footer {
+  display: flex;
+  flex-grow: 1;
+}
+
+:host ::ng-deep .modal-footer > .pull-left {
+  margin: 0 !important;
+}
+
+:host ::ng-deep .modal-footer > .pull-right {
+  margin-left: auto;
+  align-self: center;
+}
